gradle build and new dxAPI features