@@ -1,118 +1,88 @@
-buildscript {
-    repositories {
-        mavenLocal()
-        jcenter()
-        maven {
-            url "https://plugins.gradle.org/m2/"
-        }
-        maven {
-            url artifactoryURL
-            credentials {
-                username = artifactoryUser
-                password = artifactoryPassword
-            }
-        }
-    }
-    dependencies {
-        classpath 'org.ajoberstar:gradle-git:1.4.2'
-        classpath 'net.ltgt.gradle:gradle-errorprone-plugin:0.0.13'
-    }
+import net.ltgt.gradle.errorprone.CheckSeverity
 
+plugins {
+    id 'java'
+    id 'application'
+    id 'net.ltgt.errorprone'        version '0.8.1'
+    id 'com.github.spotbugs'        version '2.0.0'
+    id "com.jfrog.bintray"          version '1.8.5'
+    id 'nebula.release'             version '15.3.1'
 }
 
-apply plugin: 'java'
-apply plugin: 'application'
-apply plugin: 'net.ltgt.errorprone'
+group = 'com.pega.gcs'
+description = "Pega-TracerViewer"
+
 apply from: "$rootDir/gradle/artifacts.gradle"
 apply from: "$rootDir/gradle/jacoco.gradle"
 apply from: "$rootDir/gradle/pmd.gradle"
 apply from: "$rootDir/gradle/checkstyle.gradle"
-apply from: "$rootDir/gradle/findbugs.gradle"
+apply from: "$rootDir/gradle/spotbugs.gradle"
 apply from: "$rootDir/gradle/publishing.gradle"
 
-group = 'com.pega.gcs'
-version = '3.2-SNAPSHOT'
-description = "Pega-TracerViewer"
-
-sourceCompatibility = 1.8
-targetCompatibility = 1.8
-
-mainClassName = "com.pega.gcs.tracerviewer.TracerViewer"
-
-tasks.withType(JavaCompile) {
-	options.encoding = 'UTF-8'
-}
-
 repositories {
-     maven { url "https://dl.bintray.com/pegasystems/fringeutils" }
-     maven { url "https://repo.maven.apache.org/maven2" }
+    mavenLocal()
+    maven {
+        url "https://dl.bintray.com/pegasystems/fringeutils" 
+    }
+    mavenCentral()
 }
 
 dependencies {
-    compile group: 'dom4j', name: 'dom4j', version:'1.6.1'
-    compile group: 'gnu.getopt', name: 'java-getopt', version:'1.0.13'
-    compile group: 'commons-io', name: 'commons-io', version:'2.5'
-    compile group: 'org.apache.logging.log4j', name: 'log4j-core', version:'2.8.2'
-    compile group: 'com.pega.gcs', name: 'fringeutils-common', version:'3.1'
-    compileOnly group: 'javax.servlet', name: 'javax.servlet-api', version: '4.0.0'
-    compile group: 'net.sf.flexjson', name: 'flexjson', version: '3.3'
-    compile group: 'commons-fileupload', name: 'commons-fileupload', version: '1.3.3'
-    testCompile "junit:junit:4.12"
-    testCompile ('org.assertj:assertj-core:3.8.0')
+
+    errorprone("com.google.errorprone:error_prone_core:latest.release")
+    errorproneJavac("com.google.errorprone:javac:latest.release")
+
+    implementation 'gnu.getopt:java-getopt:1.0.13'
+
+    implementation 'com.pega.gcs:fringeutils-common:3.3.0'
+
+    testImplementation 'junit:junit:4.12'
+}
+
+application {
+    mainClassName = "com.pega.gcs.tracerviewer.TracerViewer"
+    applicationDefaultJvmArgs = ['XXX_SET_USER_DIR_XXX', '-Dfile.encoding=UTF-8', '-Xms512M', '-Xmx1G', '-XX:+UseParNewGC', '-XX:+UseConcMarkSweepGC']
 }
 
 tasks.withType(JavaCompile) {
-    // Disabled '-Werror'
-    // ,'-XepAllDisabledChecksAsWarnings'
-    // ,'-Xep:Var:OFF'
+    options.encoding = 'UTF-8'
     options.compilerArgs += ['-Xlint:-options']
+    options.compilerArgs += ['-proc:none']
     sourceCompatibility = '1.8'
     targetCompatibility = '1.8'
+    // configure error prone
+    options.errorprone.check("UnnecessaryParentheses", CheckSeverity.OFF)
+}
+
+tasks.withType(Javadoc) {
+    failOnError = false
 }
 
 tasks.withType (Test) {
     maxParallelForks = 2
+
     testLogging {
         showStandardStreams = true
         events 'started', 'passed', 'failed'
     }
+
     jacoco {
-        append = false
         destinationFile = file("$buildDir/jacoco/${name}.exec")
         classDumpDir = file("$buildDir/jacoco/${name}_ClassDump")
     }
 }
 
-test {
-    description 'Used for running unit tests.'
-    exclude '**/**MockTest.class'
-    exclude '**/**IntegTest.class'
+task copyLicense(type: Copy) {
+    from "LICENSE"
+    into "$buildDir"
 }
 
-task mockTest(type: Test) {
-    description 'Used for running mock tests.'
-    include '**/**MockTest.class'
-}
-
-task integTest(type: Test) {
-    description 'Used for running integ tests.'
-    include '**/**IntegTest.class'
-}
-
-jar {
-    manifest {
-        attributes (
-                'Main-Class': 'com.pega.gcs.tracerviewer.TracerViewer',
-        )
+// set user.dir to the distribution directory
+startScripts {
+    doLast {
+        unixScript.text = unixScript.text.replace('XXX_SET_USER_DIR_XXX', '-Duser.dir=$APP_HOME')
+        windowsScript.text = windowsScript.text.replace('XXX_SET_USER_DIR_XXX', '-Duser.dir=%APP_HOME%')
     }
-}
-
-pmd {
-    ignoreFailures = true
-}
-
-findbugs {
-    ignoreFailures = true
 }
 
 build.finalizedBy jacocoTestReport, jacocoTestCoverageVerification
